# NavalSec-Sim

./: .gitignore  LICENSE  README.md  docker-compose.yml  halo.pen  package-lock.json
datos/: .dockerignore  .env.example  Dockerfile  pyproject.toml
datos/src/app/: main.py  models.py
datos/src/app/api/routes/: logs.py
datos/src/app/core/: database.py  settings.py
datos/tests/: conftest.py  test_logs.py
fallos/: .dockerignore  .env.example  Dockerfile  pyproject.toml
fallos/src/app/: main.py  models.py
fallos/tests/: test_attacks.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsc_output.txt  vite.config.ts
frontend/public/: hacker.html
frontend/scripts/: analyze_png.cjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ErrorBoundary.tsx  LogViewer.tsx  ShipView.tsx  ThemeToggle.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/contexts/: AuthContext.tsx  LanguageContext.tsx  NotificationContext.tsx  SettingsContext.tsx  ThemeContext.tsx
frontend/src/hooks/: use-monitor.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/locales/: en.json  es.json
frontend/src/pages/: NavalStatus.tsx  Overview.tsx  Security.tsx  Settings.tsx  ayuda.tsx  dashboard.tsx  datos.tsx  fallos.tsx  login.tsx  (+3 more)
simulacion/: .dockerignore  .env.example  Dockerfile  pyproject.toml
simulacion/src/app/: main.py  models.py
simulacion/src/app/api/routes/: __init__.py  auth.py  health.py  systems.py
simulacion/src/app/core/: settings.py  simulator.py
(+25 files in other folders)
