[project]
name = "datos"
version = "0.1.0"
description = "Microservicio de almacenamiento de datos del barco"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic-settings>=2.1.0",
    "sqlmodel>=0.0.16",
    "httpx>=0.26.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0"
]